# musion

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
musion/: __init__.py
musion/beat/: README.md  __init__.py  inference.py  utils.py
musion/dsp/: README.md  __init__.py
musion/dsp/mfl/: __init__.py  inference.py
musion/separate/: README.md  __init__.py  drums.py  inference.py  utils.py
musion/struct/: README.md  __init__.py  inference.py
musion/transcribe/: README.md  __init__.py  base.py  inference.py  midi_utils.py  regression.py
musion/transcribe/drums/: drums.py  velocity.py
musion/transcribe/piano/: feat.py  piano.py
musion/transcribe/vocal/: vocal.py
musion/util/: base.py  cli.py  gui.py  parallel.py  pkg_util.py  tools.py
musion/utils/: __init__.py  base.py  cli.py  distributed.py  dynamic_gpu_parallel.py  ort_musion_base.py  parallel.py  pkg_util.py  tools.py
