[metadata]
name = musion
version = 0.2
description = MUSION, a toolbox for music information retrieval and music signal processing.
long_description = file: README.md
author = zhaotw
author_email = zhao_tw@outlook.com
url = https://github.com/zhaotw/musion

[options]
packages = find:

[options.entry_points]
console_scripts = 
	musion = musion.utils.cli:main

[options.extras_require]
test = 
	pytest>=6.1.1
dev = 
	tf2onnx
	pylint