[metadata]
name = musion
version = 0.3.1
description = MUSION, a toolbox for music information retrieval and music signal processing.
long_description = file: README.md
long_description_content_type = text/markdown
author = zhaotw
author_email = zhao_tw@outlook.com
url = https://github.com/zhaotw/musion
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
	Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio :: Analysis
	Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts = 
	musion = musion.utils.cli:main

[options.extras_require]
test = 
	pytest>=6.1.1
dev = 
	tf2onnx
	pylint